--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -42,7 +42,7 @@ common: &default_settings
   #       - Ajax Service
   #       - All Services
   # 
-  app_name: Twoxy
+  app_name: Itemator
 
   # When "true", the agent collects performance data about your 
   # application and reports this data to the NewRelic RPM service at 
